# -

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  操作手册.md  新闻分类与行动等级.txt  新闻来源与可信度规则.txt  用户业务画像.txt
.github/workflows/: daily-crossborder-news.yml
cloudflare/github-dispatch-worker/: README.md  package.json  wrangler.toml
cloudflare/github-dispatch-worker/src/: index.js
data/: sources.yml
prompts/: daily_report.md
src/crossborder_daily/: __init__.py  __main__.py  advice.py  ai_client.py  cli.py  config.py  dedupe.py  dingtalk.py  exchange_rate.py  filters.py  history.py  http_client.py  models.py  pipeline.py  report.py  scorer.py  security.py  source_config.py  splitter.py  time_utils.py
src/crossborder_daily/sources/: __init__.py  amz123.py  base.py  cpsc_api.py  fixture.py  gdelt.py  registry.py  rss.py
tests/: conftest.py  test_amz123_provider.py  test_cpsc_api_provider.py  test_dedupe.py  test_dingtalk.py  test_exchange_rate.py  test_filters.py  test_history.py  test_hot_ranking.py  test_pipeline_e2e.py  test_report.py  test_source_registry.py  test_splitter.py  test_time_window.py
tests/fixtures/: amz123_brief.html  max_age_news.json  sample_news.json
