[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crossborder-dingtalk-daily"
version = "0.1.0"
description = "Cross-border e-commerce daily news briefing pushed to DingTalk."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0.11,<7",
  "python-dateutil>=2.9.0,<3",
  "PyYAML>=6.0.1,<7",
  "requests>=2.32.0,<3",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0,<2",
  "pytest>=8.2.0,<9",
  "pytest-cov>=5.0.0,<7",
  "ruff>=0.6.0,<1",
  "types-PyYAML>=6.0.12,<7",
  "types-python-dateutil>=2.9.0,<3",
  "types-requests>=2.32.0,<3",
]

[project.scripts]
crossborder-daily = "crossborder_daily.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["crossborder_daily"]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
